samples/bad/bad011.lat
// boolean return for int function
int main() {
     return true;
}
